# ffcut

./: .gitignore  README.rst  setup.cfg  tox.ini
ffcut/: __init__.py  main.py  test.py
