[metadata]
name = ffcut
summary = FFCut: Cutting Video with FFMpeg for Human Beings
description-file = README.rst
license = MIT
classifier =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[files]
packages =
    ffcut

[entry_points]
console_scripts =
    ffcut = ffcut.main:main
