[metadata]
name = ffcut
summary = FFCut: Cutting Video with FFMpeg for Human Beings
description-file = README.rst
author = Dmitry Tantsur
home-page = https://github.com/dtantsur/ffcut
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Multimedia :: Video

[files]
packages =
    ffcut

[entry_points]
console_scripts =
    ffcut = ffcut.main:main

[bdist_wheel]
universal = 1
